--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
-        <link rel="shortcut icon" href="/image/pnc_logo.png" type="image/x-icon">
+        <link rel="shortcut icon" href="image/pnc_logo.png" type="image/x-icon">
         <link rel="stylesheet" href="css/app.css">
-        <script src="/js/app.js" defer> </script>
+        <script src="js/app.js" defer> </script>
         <title>Lyden Project: PNC-REGISTERATION</title>
     </head>
     <body>
         <!-- nav bar -->
         <nav>
-            <img src="/image/PN-Logo-pndotcom.png" class="logo" alt="">
+            <img src="image/PN-Logo-pndotcom.png" class="logo" alt="">
             <div class="nav-items">
                 REGISTERATION
             </div>
